--- a/index.html
+++ b/index.html
@@ -143,6 +143,20 @@
                 </div>
             </div>
         </section>
+        <footer class="footer text-center section-spacing">
+            <a class="footer-icon-wrapper" href="mailto:motizuki@protonmail.com" target="_blank">
+                <i class="footer-icon fas fa-envelope"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/lucasmotizuki/" class="footer-icon-wrapper" target="_blank">
+                <i class="footer-icon fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://github.com/motizukilucas/" class="footer-icon-wrapper" style="margin-right: 0px;" target="_blank">
+                <i class="footer-icon fab fa-github"></i>
+            </a>
+            <div style="color: #fff; margin-top: 36px;">
+                made with <span style="color: #7952b3;">&hearts;</span> by me
+            </div>
+        </footer>
         <script src="js/main.js" language="JavaScript" type="text/javascript"></script>  
     </body>
 </html>
