--- a/index.html
+++ b/index.html
@@ -58,31 +58,24 @@
                     <div class="skill col-12 col-md-4">
                         <h2>Development</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ultricies tristique nulla aliquet enim tortor at auctor urna nunc. 
-                            Amet aliquam id diam maecenas ultricies. A diam maecenas sed enim ut sem viverra. 
-                            Interdum velit euismod in pellentesque massa placerat duis ultricies. 
+                            2+ years of development experience, developing back-end, front-end and database services.
+                            Created several responsive webpages.
+                            Worked with automated tests, creating a range of automated functional tests.
+                            Experienced with Laravel, Rails, PHPunit, Rspec, JQuery, MySQL, PSQL, Git, Docker and others.
                         </p>
                     </div>
                     <div class="skill col-12 col-md-4">
                         <h2>DevOps</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ultricies tristique nulla aliquet enim tortor at auctor urna nunc. 
-                            Amet aliquam id diam maecenas ultricies. A diam maecenas sed enim ut sem viverra. 
-                            Interdum velit euismod in pellentesque massa placerat duis ultricies. 
+                            Implementation of software development automation projects based on DevOps techniques with infrastructure automation in AWS.
+                            Technologies used: AWS Cloudformation, Docker, AWS ECS, CloudWatch, AWS Application Load Balancer, RDS, Serverless Framework, Codepipeline, CodeBuild, CodeCommit, CodeDeploy, Apache and Nginx. 
                         </p>
                     </div>
                     <div class="skill col-12 col-md-4">
                         <h2>Design</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ultricies tristique nulla aliquet enim tortor at auctor urna nunc. 
-                            Amet aliquam id diam maecenas ultricies. A diam maecenas sed enim ut sem viverra. 
-                            Interdum velit euismod in pellentesque massa placerat duis ultricies. 
+                            Developed designs for several websites, together with the creationg of graphical mockups.
+                            Experience working with Adobe Photoshop, Gimp, Adobe Illustrator and Inkscape.
                         </p>
                     </div>
                 </div>
@@ -93,11 +86,11 @@
             <p class="section-subtitle">Software engineer based in Rio</p>
             <div class="section-body">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ultricies tristique nulla aliquet enim tortor at auctor urna nunc. 
-                    Amet aliquam id diam maecenas ultricies. A diam maecenas sed enim ut sem viverra. 
-                    Interdum velit euismod in pellentesque massa placerat duis ultricies.
+                    I'm a computer science graduate from Veiga de Almeida University.
+                    My final thesis was on independent game development, where I create a prototype of a plaformer game.
+                    Right now I'm working as a DevOps Account Manager at EzOps.Cloud.
+                    Last year I worked as a full stack developer for Bilo, a startup in Rio.
+                    Couple years earlier I did research and development for Ilumno.
                 </p>
             </div>
             <img class="about-img" src="img/display.jpg" alt="A picture profiling Lucas Motizuki smiling">
@@ -105,12 +98,12 @@
         <section id="work" class="work text-center mt-5 mb-5">
             <div class="container">
                 <h1 class="section-title">My work</h1>
-                <p class="section-subtitle">A little selection of my work</p>
+                <p class="section-subtitle">A selection of my work</p>
                 <div class="row">
                     <div class="project aws col-12 col-md-4" style="margin-left: auto;">
                         <div class="project-text">
-                            <div class="project-name">Dular Service Order Registry</div>
-                            <div class="project-tech">Laravel</div>
+                            <div class="project-name">AWS Templates</div>
+                            <div class="project-tech">Infrastructure</div>
                         </div>
                         <div class="project-button-wrapper">
                             <a class="project-button" href="https://github.com/motizukilucas/aws-static-website-deployment" target="_blank">
@@ -120,8 +113,8 @@
                     </div>
                     <div class="project harry col-12 col-md-4">
                         <div class="project-text">
-                            <div class="project-name">Dular Service Order Registry</div>
-                            <div class="project-tech">Laravel</div>
+                            <div class="project-name">Harry Potter Scraper</div>
+                            <div class="project-tech">Python</div>
                         </div>
                         <div class="project-button-wrapper">
                             <a class="project-button" href="https://github.com/motizukilucas/harry-potter-wikipedia-scraper" target="_blank">
@@ -131,8 +124,8 @@
                     </div>
                     <div class="project ti col-12 col-md-4" style="margin-right: auto;">
                         <div class="project-text">
-                            <div class="project-name">Dular Service Order Registry</div>
-                            <div class="project-tech">Laravel</div>
+                            <div class="project-name">IT Service Webpage</div>
+                            <div class="project-tech">HTML & CSS</div>
                         </div>
                         <div class="project-button-wrapper">
                             <a class="project-button" href="https://motizukilucas.github.io/motizuki-ti/" target="_blank">
