--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             2+ years of development experience, developing back-end, front-end and database services.
                             Created several responsive webpages.
                             Worked with automated tests, creating a range of automated functional tests.
-                            Experienced with Laravel, Rails, PHPunit, Rspec, JQuery, MySQL, PSQL, Git, Docker and others.
+                            Experienced with Laravel, Rails, PHPunit, RSpec, JQuery, MySQL, PSQL, Git, Docker and others.
                         </p>
                     </div>
                     <div class="skill col-12 col-md-4">
