--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             2+ years of development experience, developing back-end, front-end and database services.
                             Created several responsive webpages.
                             Worked with automated tests, creating a range of automated functional tests.
-                            Experienced with Laravel, Rails, PHPunit, RSpec, JQuery, MySQL, PSQL, Git, Docker and others.
+                            Experienced with Laravel, Rails, PHPunit, RSpec, JQuery, MySQL, PSQL, Git and Docker.
                         </p>
                     </div>
                     <div class="skill col-12 col-md-4">
@@ -82,7 +82,7 @@
             </div>
         </section>
         <section id="about" class="about container mt-5 mb-5">
-            <h1 class="section-title">Who am I?</h1>
+            <h1 class="section-title">Who I am</h1>
             <p class="section-subtitle">Software engineer based in Rio</p>
             <div class="section-body">
                 <p>
