--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
                     <div class="skill col-12 col-md-4">
                         <h2>Development</h2>
                         <p>
-                            2+ years of development experience, developing back-end, front-end and database services.
+                            2+ years of experience, developing back-end, front-end and database services.
                             Created several responsive webpages.
-                            Worked with automated tests, creating a range of automated functional tests.
-                            Experienced with Laravel, Rails, PHPunit, RSpec, JQuery, MySQL, PSQL, Git and Docker.
+                            Also worked with automated testing.
+                            Experienced with Laravel, Rails, PHPunit, RSpec, JQuery, MySQL, PSQL, Git & Docker.
                         </p>
                     </div>
                     <div class="skill col-12 col-md-4">
                         <h2>DevOps</h2>
                         <p>
                             Implementation of software development automation projects based on DevOps techniques with infrastructure automation in AWS.
-                            Technologies used: AWS Cloudformation, Docker, AWS ECS, CloudWatch, AWS Application Load Balancer, RDS, Serverless Framework, Codepipeline, CodeBuild, CodeCommit, CodeDeploy, Apache and Nginx. 
+                            Technologies used: Cloudformation, Docker, ECS, CloudWatch, Application Load Balancer, RDS, Codepipeline, CodeBuild, CodeCommit, CodeDeploy, Apache & Nginx. 
                         </p>
                     </div>
                     <div class="skill col-12 col-md-4">
@@ -86,11 +86,10 @@
             <p class="section-subtitle">Software engineer based in Rio</p>
             <div class="section-body">
                 <p>
-                    I'm a computer science graduate from Veiga de Almeida University.
-                    My final thesis was on independent game development, where I create a prototype of a plaformer game.
-                    Right now I'm working as a DevOps Account Manager at EzOps.Cloud.
-                    Last year I worked as a full stack developer for Bilo, a startup in Rio.
-                    Couple years earlier I did research and development for Ilumno.
+                    I'm a computer science graduate from Veiga de Almeida University, my final's thesis was on independent game development, where I create a prototype of a plaformer game.
+                    Currently I'm working as a DevOps Engineer at EzOps.Cloud.
+                    Last year I worked as a full-stack developer for Bilo, a startup in Rio.
+                    A while ago I did research and development for Ilumno.
                 </p>
             </div>
             <img class="about-img" src="img/display.jpg" alt="A picture profiling Lucas Motizuki smiling">
