--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <h2>Design</h2>
                         <p>
                             Developed designs for several websites, together with the creationg of graphical mockups.
-                            Experience working with Adobe Photoshop, Gimp, Adobe Illustrator and Inkscape.
+                            Experience working with Adobe Photoshop, Gimp, Adobe Illustrator & Inkscape.
                         </p>
                     </div>
                 </div>
@@ -86,9 +86,9 @@
             <p class="section-subtitle">Software engineer based in Rio</p>
             <div class="section-body">
                 <p>
-                    I'm a computer science graduate from Veiga de Almeida University, my final's thesis was on independent game development, where I create a prototype of a plaformer game.
+                    I'm a Computer Science graduate from Veiga de Almeida University. My final's thesis was on independent game development, where I created a prototype of a plaformer game.
                     Currently I'm working as a DevOps Engineer at EzOps.Cloud.
-                    Last year I worked as a full-stack developer for Bilo, a startup in Rio.
+                    Last year I worked as a Full-Stack Developer for Bilo, a startup in Rio.
                     A while ago I did research and development for Ilumno.
                 </p>
             </div>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="project harry col-12 col-md-4">
                         <div class="project-text">
-                            <div class="project-name">Harry Potter Scraper</div>
+                            <div class="project-name">Harry Potter Character Scraper</div>
                             <div class="project-tech">Python</div>
                         </div>
                         <div class="project-button-wrapper">
