--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="project harry col-12 col-md-4">
                         <div class="project-text">
-                            <div class="project-name">Harry Potter Character Scraper</div>
+                            <div class="project-name">Harry Potter Scraper</div>
                             <div class="project-tech">Python</div>
                         </div>
                         <div class="project-button-wrapper">
