--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Lucas Motizuki</title>
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         <link href="css/fonts.css" rel="stylesheet" type="text/css">
         <script src="js/jquery-3.6.0.min.js"></script><!-- jquery -->
         <!-- bootstrap -->
