--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Lucas Motizuki</title>
+        <title>Lucas Motizuki | Software Engineer</title>
+        <meta name="description" content="Lucas Motizuki is a Software Engineer focused on web development">
         <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         <link href="css/fonts.css" rel="stylesheet" type="text/css">
         <script src="js/jquery-3.6.0.min.js"></script><!-- jquery -->
