--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Lucas Motizuki | Software Engineer</title>
-        <meta name="description" content="Lucas Motizuki is a Software Engineer focused on web development">
+        <meta name="description" content="Lucas Motizuki is a Software Engineer experienced with web development, based in Rio de Janeiro, Brazil.">
+        <meta name="keyword" content="Lucas Motizuki, software engineer, full stack, web developer, PHP, Laravel, database engines, MySQL, postgreSQL, responsive design, Bootstrap, JQuery, Javascript, unit testing, PHPUnit, RSpec, version control, Git, Docker, DevOps, AWS, Nginx, Apache, Rio de Janeiro, Brazil.">
+        <meta name="author" content="Lucas Motizuki">
         <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         <link href="css/fonts.css" rel="stylesheet" type="text/css">
         <script src="js/jquery-3.6.0.min.js"></script><!-- jquery -->
