Fix navigation menu

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                             <a class="nav-link" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#work">Work</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">About</a>
+                            <a class="nav-link" href="#work">Work</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
@@ -138,7 +138,7 @@
                 </div>
             </div>
         </section>
-        <footer class="footer text-center section-spacing">
+        <footer id="contact" class="footer text-center section-spacing">
             <a class="footer-icon-wrapper" href="mailto:motizuki@protonmail.com" target="_blank">
                 <i class="footer-icon fas fa-envelope"></i>
             </a>
