--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="skill col-12 col-md-4">
                         <h2>Development</h2>
                         <p>
-                            2+ years of experience, developing back-end, front-end and database services.
+                            2+ years of experience developing back-end, front-end and database services.
                             Created several responsive webpages.
                             Also worked with automated testing.
                             Experienced with Laravel, Rails, PHPunit, RSpec, JQuery, MySQL, PSQL, Git & Docker.
