Adding new projects

--- a/index.html
+++ b/index.html
@@ -126,11 +126,44 @@
                     </div>
                     <div class="project ti col-12 col-md-4" style="margin-right: auto;">
                         <div class="project-text">
-                            <div class="project-name">IT Service Webpage</div>
+                            <div class="project-name">IT Service</div>
                             <div class="project-tech">HTML & CSS</div>
                         </div>
                         <div class="project-button-wrapper">
                             <a class="project-button" href="https://motizukilucas.github.io/motizuki-ti/" target="_blank">
+                                VIEW
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project dular col-12 col-md-4" style="margin-left: auto;">
+                        <div class="project-text">
+                            <div class="project-name">Dular</div>
+                            <div class="project-tech">Laravel</div>
+                        </div>
+                        <div class="project-button-wrapper">
+                            <a class="project-button" href="https://github.com/motizukilucas/dular" target="_blank">
+                                VIEW
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project thehider col-12 col-md-4">
+                        <div class="project-text">
+                            <div class="project-name">The Hider</div>
+                            <div class="project-tech">HTML & CSS</div>
+                        </div>
+                        <div class="project-button-wrapper">
+                            <a class="project-button" href="https://thehider.surge.sh/" target="_blank">
+                                VIEW
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project paypal col-12 col-md-4" style="margin-right: auto;">
+                        <div class="project-text">
+                            <div class="project-name">PayPal Button</div>
+                            <div class="project-tech">Javascript</div>
+                        </div>
+                        <div class="project-button-wrapper">
+                            <a class="project-button" href="https://github.com/motizukilucas/paypal-button-implementation/" target="_blank">
                                 VIEW
                             </a>
                         </div>
