Fix misspelling error

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     <div class="skill col-12 col-md-4">
                         <h2>Design</h2>
                         <p>
-                            Developed designs for several websites, together with the creationg of graphical mockups.
-                            Experience working with Adobe Photoshop, Gimp, Adobe Illustrator & Inkscape.
+                            Developed designs for several websites, together with the creation of graphical mockups.
+                            Experience working with Photoshop, Gimp, Illustrator & Inkscape.
                         </p>
                     </div>
                 </div>
