Fix margins with projects

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <div class="container">
                 <h1 class="section-title">My work</h1>
                 <p class="section-subtitle">A selection of my work</p>
-                <div class="row">
-                    <div class="project aws col-12 col-md-4" style="margin-left: auto;">
+                <div class="row" style="margin: auto;">
+                    <div class="project aws col-12 col-md-4">
                         <div class="project-text">
                             <div class="project-name">AWS Templates</div>
                             <div class="project-tech">Infrastructure</div>
@@ -124,7 +124,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="project ti col-12 col-md-4" style="margin-right: auto;">
+                    <div class="project ti col-12 col-md-4">
                         <div class="project-text">
                             <div class="project-name">IT Service</div>
                             <div class="project-tech">HTML & CSS</div>
@@ -135,7 +135,9 @@
                             </a>
                         </div>
                     </div>
-                    <div class="project dular col-12 col-md-4" style="margin-left: auto;">
+                </div>
+                <div class="row" style="margin: auto;">
+                    <div class="project dular col-12 col-md-4">
                         <div class="project-text">
                             <div class="project-name">Dular</div>
                             <div class="project-tech">Laravel</div>
@@ -157,7 +159,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="project paypal col-12 col-md-4" style="margin-right: auto;">
+                    <div class="project paypal col-12 col-md-4">
                         <div class="project-text">
                             <div class="project-name">PayPal Button</div>
                             <div class="project-tech">Javascript</div>
