Fix centralization issue

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="skill col-12 col-md-4">
                         <h2>Development</h2>
                         <p>
-                            2+ years of experience developing back-end, front-end and database services.
+                            5+ years of experience developing back-end, front-end and database services.
                             Created several responsive webpages.
                             Also worked with automated testing.
                             Experienced with Laravel, Rails, PHPunit, RSpec, JQuery, MySQL, PSQL, Git & Docker.
@@ -70,7 +70,7 @@
                     <div class="skill col-12 col-md-4">
                         <h2>DevOps</h2>
                         <p>
-                            Implementation of software development automation projects based on DevOps techniques with infrastructure automation in AWS.
+                            2+ years of experience automating software development projects based on DevOps techniques with infrastructure in AWS.
                             Technologies used: Cloudformation, Docker, ECS, CloudWatch, Application Load Balancer, RDS, Codepipeline, CodeBuild, CodeCommit, CodeDeploy, Apache & Nginx. 
                         </p>
                     </div>
@@ -101,7 +101,8 @@
             <div class="container">
                 <h1 class="section-title">My work</h1>
                 <p class="section-subtitle">A selection of my work</p>
-                <div class="row" style="margin: auto;">
+                <div class="mx-auto project-wrapper"style="width: fit-content;">
+                <div class="row">
                     <div class="project aws col-12 col-md-4">
                         <div class="project-text">
                             <div class="project-name">AWS Templates</div>
@@ -136,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" style="margin: auto;">
+                <div class="row">
                     <div class="project dular col-12 col-md-4">
                         <div class="project-text">
                             <div class="project-name">Dular</div>
@@ -171,6 +172,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
         <footer id="contact" class="footer text-center section-spacing">
