Remove style in html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="container">
                 <h1 class="section-title">My work</h1>
                 <p class="section-subtitle">A selection of my work</p>
-                <div class="mx-auto project-wrapper"style="width: fit-content;">
+                <div class="mx-auto project-wrapper">
                 <div class="row">
                     <div class="project aws col-12 col-md-4">
                         <div class="project-text">
